tests: add example of custom taskpools
Add an example to demonstrate the use of a custom taskpool and how to configure
it on the task. Currently the taskpool does not do much yet but it'll create
some custom threads later on.

--- a/gstreamer/tests/examples/streams/Makefile.am
+++ b/gstreamer/tests/examples/streams/Makefile.am
@@ -1,4 +1,9 @@
-noinst_PROGRAMS = stream-status
+noinst_PROGRAMS = stream-status rtpool-test
 
+stream_status_SOURCES = stream-status.c
 stream_status_LDADD = $(GST_OBJ_LIBS)
 stream_status_CFLAGS = $(GST_OBJ_CFLAGS)
+
+rtpool_test_SOURCES = rtpool-test.c testrtpool.c
+rtpool_test_LDADD = $(GST_OBJ_LIBS)
+rtpool_test_CFLAGS = $(GST_OBJ_CFLAGS)
