soundtouch: fix configure to use proper shell syntax. fixes #580091

--- a/gst-plugins-bad/configure.ac
+++ b/gst-plugins-bad/configure.ac
@@ -1268,10 +1268,10 @@ AG_GST_CHECK_FEATURE(SOUNDTOUCH, [soundtouch plug-in], soundtouch, [
     [PKG_CHECK_MODULES(SOUNDTOUCH, soundtouch-1.0,
       [HAVE_SOUNDTOUCH=yes
         HAVE_SOUNDTOUCH_1_4=no
-        SOUNDTOUCH_LIBS=$"SOUNDTOUCH_LIBS -lBPM"], 
+        SOUNDTOUCH_LIBS="$SOUNDTOUCH_LIBS -lBPM"], 
       [PKG_CHECK_MODULES(SOUNDTOUCH, libSoundTouch,
         HAVE_SOUNDTOUCH=yes
-        SOUNDTOUCH_LIBS=$"SOUNDTOUCH_LIBS -lBPM", 
+        SOUNDTOUCH_LIBS="$SOUNDTOUCH_LIBS -lBPM", 
         HAVE_SOUNDTOUCH=no)])])
   AC_SUBST(SOUNDTOUCH_CFLAGS)
   AC_SUBST(SOUNDTOUCH_LIBS)
