--- a/gst-plugins-base/tests/check/Makefile.am
+++ b/gst-plugins-base/tests/check/Makefile.am
@@ -100,7 +100,6 @@ check_PROGRAMS = \
 	elements/gdppay \
 	elements/multifdsink \
 	elements/playbin \
-	elements/playbin2 \
 	$(check_subparse) \
 	elements/videorate \
 	elements/videoscale \
@@ -131,7 +130,7 @@ VALGRIND_TO_FIX = \
 	libs/video
 
 # these tests don't even pass
-noinst_PROGRAMS = $(check_libvisual)
+noinst_PROGRAMS = $(check_libvisual) elements/playbin2
 
 AM_CFLAGS = $(GST_CFLAGS) $(GST_CHECK_CFLAGS)
 LDADD = $(GST_LIBS) $(GST_CHECK_LIBS)
