Fix libdir for uninstalled gstreamer-app library

--- a/gst-plugins-base/pkgconfig/gstreamer-app-uninstalled.pc.in
+++ b/gst-plugins-base/pkgconfig/gstreamer-app-uninstalled.pc.in
@@ -1,6 +1,6 @@
 prefix=
 exec_prefix=
-libdir=${pcfiledir}/../gst-libs/gst/tag
+libdir=${pcfiledir}/../gst-libs/gst/app
 includedir=${pcfiledir}/../gst-libs
 
 Name: GStreamer Application Library, Uninstalled
