--- a/gst-plugins-good/tests/files/Makefile.am
+++ b/gst-plugins-good/tests/files/Makefile.am
@@ -2,5 +2,6 @@
 EXTRA_DIST = \
 	id3-407349-1.tag \
 	id3-407349-2.tag \
-	id3-447000-wcop.tag
+	id3-447000-wcop.tag \
+	id3-577468-unsynced-tag.tag
 
