rtp: Link to -lm
Fixes bug #582281.

--- a/gst-plugins-good/gst/rtp/Makefile.am
+++ b/gst-plugins-good/gst/rtp/Makefile.am
@@ -71,7 +71,8 @@ libgstrtp_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
 libgstrtp_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) $(GST_BASE_LIBS) \
 		-lgstaudio-@GST_MAJORMINOR@ \
                 -lgsttag-@GST_MAJORMINOR@ \
-                -lgstrtp-@GST_MAJORMINOR@ $(WINSOCK2_LIBS)
+                -lgstrtp-@GST_MAJORMINOR@ $(WINSOCK2_LIBS) \
+		$(LIBM)
 libgstrtp_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS) 
 libgstrtp_la_LIBTOOLFLAGS = --tag=disable-static
 
