Recovered debugutils line accidentally removed in deinterlace2 move.

--- a/gst-plugins-good/configure.ac
+++ b/gst-plugins-good/configure.ac
@@ -1057,6 +1057,7 @@ gst/autodetect/Makefile
 gst/avi/Makefile
 gst/cutter/Makefile
 gst/deinterlace/Makefile
+gst/debugutils/Makefile
 gst/effectv/Makefile
 gst/equalizer/Makefile
 gst/flv/Makefile
