--- a/gst-plugins-good/tests/files/Makefile.am
+++ b/gst-plugins-good/tests/files/Makefile.am
@@ -1,7 +1,10 @@
 
 EXTRA_DIST = \
+	audiotestsrc.flac \
 	id3-407349-1.tag \
 	id3-407349-2.tag \
 	id3-447000-wcop.tag \
-	id3-577468-unsynced-tag.tag
+	id3-577468-unsynced-tag.tag \
+	test-cert.pem \
+	test-key.pem
 
