Moved 'directdraw' from -good to -bad

--- a/gst-plugins-good/sys/Makefile.am
+++ b/gst-plugins-good/sys/Makefile.am
@@ -10,12 +10,6 @@ else
 OSS_DIR=
 endif
 
-if USE_DIRECTDRAW
-DIRECTDRAW_DIR=directdraw
-else
-DIRECTDRAW_DIR=
-endif
-
 if USE_DIRECTSOUND
 DIRECTSOUND_DIR=directsound
 else
@@ -76,6 +70,6 @@ else
 XIMAGE_DIR=
 endif
 
-SUBDIRS=$(DIRECTDRAW_DIR) $(DIRECTSOUND_DIR) $(OSS_DIR) $(OSX_AUDIO_DIR) $(OSX_VIDEO_DIR) $(SUNAUDIO_DIR) $(V4L2_DIR) $(XIMAGE_DIR)
+SUBDIRS=$(DIRECTSOUND_DIR) $(OSS_DIR) $(OSX_AUDIO_DIR) $(OSX_VIDEO_DIR) $(SUNAUDIO_DIR) $(V4L2_DIR) $(XIMAGE_DIR)
 
-DIST_SUBDIRS=directdraw directsound oss osxaudio osxvideo sunaudio v4l2 waveform ximage
+DIST_SUBDIRS=directsound oss osxaudio osxvideo sunaudio v4l2 waveform ximage
