--- a/gst-plugins-base/configure.ac
+++ b/gst-plugins-base/configure.ac
@@ -12,7 +12,7 @@ AC_INIT(GStreamer Base Plug-ins, 0.10.23.1,
 AG_GST_INIT
 
 dnl initialize automake
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([-Wno-portability])
 
 dnl define PACKAGE_VERSION_* variables
 AS_VERSION
