--- a/gst-plugins-bad/gst/dvdspu/Makefile.am
+++ b/gst-plugins-bad/gst/dvdspu/Makefile.am
@@ -1,13 +1,13 @@
 
 plugin_LTLIBRARIES = libgstdvdspu.la
 
-libgstdvdspu_la_SOURCES = gstdvdspu.c gstdvdspu-render.c
+libgstdvdspu_la_SOURCES = gstdvdspu.c gstdvdspu-render.c gstspu-pgs.c
 
 libgstdvdspu_la_CFLAGS = $(GST_CFLAGS)
 libgstdvdspu_la_LIBADD = $(GST_LIBS)
 libgstdvdspu_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstdvdspu_la_LIBTOOLFLAGS = --tag=disable-static
 
-noinst_HEADERS = gstdvdspu.h
+noinst_HEADERS = gstdvdspu.h gstspu-pgs.h
 
 EXTRA_DIST = Notes.txt
