m4: fix 'suspicious cache id' warnings
and update common to pull in a similar fix. Also check in configure
whether the compiler supports do while macros (GLib wants this
defined and it is needed to avoid warnings with some c++ compilers
apparently).

--- a/gst-plugins-good/configure.ac
+++ b/gst-plugins-good/configure.ac
@@ -116,6 +116,9 @@ AM_PROG_CC_C_O
 dnl find an assembler
 AM_PROG_AS
 
+dnl check if the compiler supports do while(0) macros
+AG_GST_CHECK_DOWHILE_MACROS
+
 AC_PATH_PROG(VALGRIND_PATH, valgrind, no)
 AM_CONDITIONAL(HAVE_VALGRIND, test ! "x$VALGRIND_PATH" = "xno")
 
