--- a/gstreamer/tests/examples/streams/Makefile.am
+++ b/gstreamer/tests/examples/streams/Makefile.am
@@ -4,6 +4,6 @@ stream_status_SOURCES = stream-status.c
 stream_status_LDADD = $(GST_OBJ_LIBS)
 stream_status_CFLAGS = $(GST_OBJ_CFLAGS)
 
-rtpool_test_SOURCES = rtpool-test.c testrtpool.c
+rtpool_test_SOURCES = rtpool-test.c rtpool-test.h testrtpool.c
 rtpool_test_LDADD = $(GST_OBJ_LIBS)
 rtpool_test_CFLAGS = $(GST_OBJ_CFLAGS)
