autotools: move -Wno-portability for automake to configure.ac

--- a/gst-plugins-bad/configure.ac
+++ b/gst-plugins-bad/configure.ac
@@ -10,7 +10,7 @@ AC_INIT(GStreamer Bad Plug-ins, 0.10.12.1,
 AG_GST_INIT
 
 dnl initialize automake
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([-Wno-portability])
 
 dnl define PACKAGE_VERSION_* variables
 AS_VERSION
