tests: add rtpbin unit test
Add the beginnings of an rtpbin unit test
Add some more stuff to .gitignore

--- a/gst-plugins-bad/tests/check/Makefile.am
+++ b/gst-plugins-bad/tests/check/Makefile.am
@@ -92,6 +92,7 @@ check_PROGRAMS = \
 	elements/camerabin \
 	elements/legacyresample \
 	elements/qtmux \
+	elements/rtpbin \
 	elements/selector \
 	elements/mxfdemux \
 	elements/mxfmux \
