controller: add a benchmark to verify the switch to gsequence

--- a/gstreamer/tests/benchmarks/Makefile.am
+++ b/gstreamer/tests/benchmarks/Makefile.am
@@ -1,6 +1,7 @@
 noinst_PROGRAMS = \
         caps \
         complexity \
+        controller \
         init \
         mass-elements \
         gstpollstress \
@@ -8,4 +9,7 @@ noinst_PROGRAMS = \
 
 LDADD = $(GST_OBJ_LIBS)
 AM_CFLAGS = $(GST_OBJ_CFLAGS)
+
+controller_CFLAGS  = $(GST_OBJ_CFLAGS) -I$(top_builddir)/libs
+controller_LDFLAGS = $(top_builddir)/libs/gst/controller/libgstcontroller-@GST_MAJORMINOR@.la
 
